--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,16 +50,16 @@ jobs:
     - name: Test CI
       uses: dabao1955/kernel_build_action@main
       with: 
-          kernel-url: https://github.com/AcmeUI-Devices/android_kernel_xiaomi_cas
+          kernel-url: https://github.com/DOITfit/xiaomi_kernel_sm8250
           kernel-dir: msm-4.19
-          branch: taffy
-          config: cas_defconfig
+          branch: alioth
+          config: alioth_defconfig
           arch: arm64
           aosp-gcc: true
           aosp-clang: true
           ksu: true
           ksu-version: main
-          android-version: 12
+          android-version: 13
           aosp-clang-version: r383902
           python-27: true
           disable-lto: true
